--- a/MiniatureDifferential/Debug/makefile
+++ b/MiniatureDifferential/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: MiniatureDifferential.elf secondary-outputs
 
 # Tool invocations
-MiniatureDifferential.elf MiniatureDifferential.map: $(OBJS) $(USER_OBJS) D:\Code\EDC2022-main\EDC2022\MiniatureDifferential\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "MiniatureDifferential.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\Code\EDC2022-main\EDC2022\MiniatureDifferential\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MiniatureDifferential.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
+MiniatureDifferential.elf MiniatureDifferential.map: $(OBJS) $(USER_OBJS) C:\Users\abcde\Documents\ShutDown\Tsinghua\EDC2022\STM32Code\MiniatureDifferential\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "MiniatureDifferential.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\abcde\Documents\ShutDown\Tsinghua\EDC2022\STM32Code\MiniatureDifferential\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MiniatureDifferential.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
